Reformat code according to the code style.